# dapsy

./: Cargo.toml  README.md
src/: cli.rs  config.rs  converter.rs  library.rs  main.rs  playlist.rs  track.rs
src/cli/: args.rs  cmd.rs
src/cli/cmd/: init.rs  track.rs
src/cli/cmd/track/: convert.rs
src/playlist/: entries.rs  entry.rs
